--- a/client/public/index.html
+++ b/client/public/index.html
@@ -42,7 +42,20 @@
 		/>
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-EMLN2NBEB8"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
 
+			gtag('config', 'G-EMLN2NBEB8');
+		</script>
 		<title>Cardano Blockchain Snapshot</title>
 	</head>
 	<body>
